--- a/.env.
+++ b/.env.
@@ -2,4 +2,4 @@ FLASK_ENV=development
 FLASK_RUN_PORT=8080
 FLASK_RUN_HOST=0.0.0.0
 DATABASE_URL=postgresql://username:password@localhost/databasename
-SECRET_KEY=some-unique-and-random-key
+SECRET_KEY='Som3$ec5etK*y'
